@@ -16,7 +16,7 @@ public class Stack {
             throw new IndexOutOfBoundsException("Stack is empty");
         }
         int temp = stack.getLast();
-        stack.remove(stack.size()-1);
+        stack.removeLast();
         return temp;
     }
     public int peek(){
@@ -28,7 +28,7 @@ public class Stack {
     public int[] pop(int n){
         int[] temp = new int[n];
         for (int i = 0; i < n; i++) {
-            temp[i] = stack.remove(stack.size()-1);
+            temp[i] = stack.removeLast();
             System.out.println("[" + temp[i] + "]");
         }
         return temp;
